# differential-datalog

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  LICENSE  Makefile  README.md  TODO  build_distro.sh  default.nix  differential-datalog.cabal  install-dependencies.sh  package.yaml  stack.yaml  test.sh
d3log/: Cargo.toml  Makefile  d3.dl  d3_application.dl  issues
d3log/examples/: Makefile  Makefile~  mm.dl
d3log/src/: batch.rs  broadcast.rs  child.rs  d3.rs  d3main.rs  datfile.rs  ddvalue_batch.rs  dispatch.rs  display.js  display.rs  error.rs  forwarder.rs  json_framer.rs  main.rs  process.rs  record_batch.rs  tcp_network.rs  transact.rs
rust/ddlog_benches/: Cargo.toml  Makefile.toml  README.md
rust/ddlog_benches/benches/: citations.rs  live_journal.rs  twitter.rs
rust/ddlog_benches/ddlog/: benchmarks.dl  citations.dl  live_journal.dl  twitter.dl
rust/ddlog_benches/src/: citations.rs  lib.rs  live_journal.rs  twitter.rs  utils.rs
rust/differential_datalog/: Cargo.toml  int.rs  lib.rs  profile.rs  program.rs  test.rs  uint.rs  variable.rs
rust/dyn-ddlog/: Cargo.toml
rust/dyn-ddlog/src/: ast.rs  ddlog.lalrpop  grammar.rs  lib.rs  optimize.rs  resolve.rs
rust/dyn-ddlog/src/ast/: debug_printing.rs  mod.rs  rewrite.rs  rewrites.rs  transform.rs  tree.rs
rust/dyn-ddlog/src/ast/rewrites/: block_simplifier.rs  mod.rs  nesting_eliminator.rs  nesting_simplifier.rs
rust/dyn-ddlog/src/ast/validate/: mod.rs
rust/dyn-ddlog/src/optimize/: expr.rs  mod.rs  relational.rs
rust/dyn-ddlog/tests/: ui.rs
rust/dyn-ddlog/tests/corpus/: empty_file.dl  expressions.dl  fibonacci.dl  relation.dl
rust/template/: Cargo.toml  README.md  api.rs  build.rs  channel.rs  ddlog.h  ddlog_ovsdb_test.c  ffi.h  ffi.rs  ffi_test.rs  flatbuf.rs  lib.rs  main.rs  ovsdb.rs  server.rs  stdlib.rs  to_ffi.rs  update_handler.rs  valmap.rs
rust/template/.cargo/: config
rust/template/cmd_parser/: Cargo.toml  from_record.rs  lib.rs  parse.rs  remote_listener.rs
rust/template/d3log/: Cargo.toml  Makefile  README  d3_application.dl  d3_supervisor.dl  display.dl
rust/template/d3log/examples/: Makefile  gather.dl  matrix.dl  mini_skyline.dl  mini_skyline.json  mm.dl
rust/template/d3log/src/: batch.rs  broadcast.rs  datfile.rs  ddvalue_batch.rs  dispatch.rs  display.rs  error.rs  forwarder.rs  json_framer.rs  lib.rs  main.rs  process.rs  record_batch.rs  record_set.rs  tcp_network.rs  thread_instance.rs  value_set.rs
rust/template/ddlog_derive/: Cargo.toml
rust/template/ddlog_derive/src/: from_record.rs  into_record.rs  lib.rs  mutator.rs
rust/template/ddlog_derive/tests/: ui.rs
rust/template/ddlog_profiler/: Cargo.toml
rust/template/ddlog_profiler/profiler_ui/: package.json  ui.css  ui.html  ui.js  ui.ts
rust/template/ddlog_profiler/src/: debug_info.rs  lib.rs  profile_statistics.rs  source_code.rs
rust/template/differential_datalog/: Cargo.toml  arcval.rs  ddlog.rs  ddval.rs  int.rs  lib.rs  profile.rs  profile_statistics.rs  program.rs  record.rs  replay.rs  test.rs  test_record.rs  test_value.rs  uint.rs  valmap.rs  variable.rs
rust/template/differential_datalog/ddval/: ddval_convert.rs  ddvalue.rs  mod.rs
rust/template/differential_datalog/program/: arrange.rs  mod.rs  update.rs  worker.rs
rust/template/differential_datalog/src/: ddlog.rs  lib.rs  profile.rs  profile_statistics.rs  record.rs  replay.rs  test_record.rs  utils.rs  valmap.rs  variable.rs
rust/template/differential_datalog/src/api/: c_api.rs  mod.rs  update_handler.rs
rust/template/differential_datalog/src/dataflow/: arrange.rs  consolidate.rs  distinct.rs  filter_map.rs  map.rs  (+1 more)
rust/template/differential_datalog_test/: Cargo.toml  lib.rs  test_value.rs
rust/template/distributed_datalog/: Cargo.toml  README.md
rust/template/distributed_datalog/observe/: Cargo.toml
rust/template/distributed_datalog/src/: assign.rs  instantiate.rs  lib.rs  members.rs  read_config.rs  schema.rs  server.rs  test.rs  txnmux.rs  zookeeper.rs
rust/template/distributed_datalog/tcp_channel/: Cargo.toml
rust/template/observe/: Cargo.toml  lib.rs  observable.rs  observer.rs  subscription.rs
rust/template/ovsdb/: Cargo.toml  README  lib.rs  test.rs
rust/template/ovsdb/test_data/: README
rust/template/src/: api.rs  build.rs  channel.rs  d3main.rs  flatbuf.rs  flatbuf_generated.rs  inventory.rs  lib.rs  main.rs  ovsdb.rs  ovsdb_api.rs  server.rs  update_handler.rs  valmap.rs
rust/template/src/api/: c_api.rs  mod.rs
rust/template/tcp_channel/: Cargo.toml  lib.rs  message.rs  receiver.rs  sender.rs
rust/template/tests/: interact_clear_error.rs  interact_dump_error.rs  interact_exit.rs
rust/template/tests/common/: mod.rs
rust/template/types/: Cargo.toml  closure.rs  ddval_convert.rs  flatbuf.rs  int.rs  lib.rs  log.rs  module.rs  uint.rs
rust/template/value/: Cargo.toml  flatbuf.rs  lib.rs
test/datalog_tests/dbpedia_ownership/: Cargo.toml  Makefile  README.md  remove-accumulator-in-instantiate.patch
test/datalog_tests/dbpedia_ownership/data/: dbpedia_ownership.csv  generate.py
test/datalog_tests/dbpedia_ownership/src/: main.rs
test/datalog_tests/ip_discovery/: Cargo.toml  Makefile  generate.py  move-realized-address-computation-into-ctrl.patch
test/datalog_tests/ip_discovery/src/: main.rs
test/datalog_tests/lb_test/: Cargo.toml  test.sh
test/datalog_tests/lb_test/src/: main.rs
test/datalog_tests/receiver/: Cargo.toml
test/datalog_tests/receiver/src/: main.rs
test/datalog_tests/rust_api_test/: Cargo.toml  README.md  test.sh
test/datalog_tests/rust_api_test/src/: main.rs
test/datalog_tests/server_api/: Cargo.toml
test/datalog_tests/server_api/data/: server_api_3_p3out.dump.expected
test/datalog_tests/server_api/src/: lib.rs  main.rs
test/datalog_tests/server_api/tests/: config.rs  deltas.rs  events.rs  realization_tests.rs  server_api_3_p3out.dump.expected  test.rs
test/datalog_tests/tcp_a/: Cargo.toml
test/datalog_tests/tcp_a/src/: main.rs
test/datalog_tests/tcp_left/: Cargo.toml
test/datalog_tests/tcp_left/src/: main.rs
(+1280 files in other folders)
