[workspace]
members = [
    "rust/template",
    "rust/template/ovsdb",
    "rust/template/cmd_parser",
    "rust/template/ddlog_derive",
    "rust/template/ddlog_profiler",
    "rust/template/differential_datalog",
    "rust/template/differential_datalog_test",
]
exclude = ["test/", "rust/ddlog_benches"]
