[package]
name = "ddlog_benches"
version = "0.1.0"
edition = "2018"
license = "MIT"

[features]
# Use the following to run with checked_weights:
# panic on weight overflow.
#default = ["benchmarks_ddlog/checked_weights"]
default = []

[dependencies]
# criterion-0.3.6 and later require Rust 2021, which is supported since rustc 1.56 compiler.
criterion = "=0.3.3"
flate2 = "1.0.19"
csv = "1.1.5"

[dependencies.benchmarks_ddlog]
package = "benchmarks"
path = "generated/benchmarks_ddlog"
default-features = false

[dependencies.differential_datalog]
path = "generated/benchmarks_ddlog/differential_datalog"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "twitter"
harness = false

[[bench]]
name = "live_journal"
harness = false
