[package]
name = "differential_datalog"
version = "0.1.0"

[dependencies.graph_map]
git="https://github.com/frankmcsherry/graph-map.git"

[dependencies.differential-dataflow]
git="https://github.com/frankmcsherry/differential-dataflow.git"

[dependencies.cmd_parser]
path = "../cmd_parser"

[dev-dependencies]
getopts="0.2.14"
rand="0.3.13"
byteorder="0.4.2"
itertools="^0.6"

[dependencies]
abomonation= { git = "https://github.com/frankmcsherry/abomonation" }
abomonation_derive = "0.3"
#timely="0.6"
timely = { git = "https://github.com/frankmcsherry/timely-dataflow" }
#timely_communication="0.6"
fnv="1.0.2"
num = "0.2"
serde = "1.0.14"
serde_derive = "1.0.14"

[features]
default = []

[profile.release]
opt-level = 1
debug = false
rpath = false
lto = false
debug-assertions = false

[lib]
name = "differential_datalog"
path = "./lib.rs"
