[package]
name = "dyn-ddlog"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
edition = "2018"
build = "build.rs"
default-run = "ddlog"

[features]
default = ["debug-printing"]
debug-printing = ["pretty"]

[[bin]]
name = "ddlog"
required-features = ["structopt"]

[dependencies]
egg = "0.6.0"
regex = "1.4.5"
lalrpop-util = "0.19.5"
pretty = { version = "0.10.0", optional = true }
structopt = { version = "0.3.21", optional = true }

[dev-dependencies]
goldentests = "0.3.7"

[build-dependencies]
lalrpop = "0.19.5"
