[package]
name = "datalog_example"
version = "0.1.0"
edition = "2018"
autobins = false
build = "src/build.rs"

[workspace]
members = [
  "differential_datalog",
  "distributed_datalog",
  "types",
  "value"
]

[dependencies.differential_datalog]
path = "./differential_datalog"

[dependencies.types]
path = "./types"

[dependencies.value]
path = "./value"

[dependencies]
abomonation = "0.7"
time = {version = "0.2", features = ["serde"]}
ordered-float = {version = "1.0.2", features = ["serde"]}
cpuprofiler = {version = "0.0", optional = true}
differential-dataflow = "0.11.0"
fnv = "1.0.2"
lazy_static = "1.3"
libc = "0.2"
num-traits = "0.2"
num = { version = "0.2", features = ["serde"] }
rustop = "1.0.2"
serde = {version = "1.0", features = ["derive"]}
timely = "0.11"
twox-hash = "1.1"

[features]
default = []
flatbuf = ["differential_datalog/flatbuf", "types/flatbuf", "value/flatbuf"]
profile = ["cpuprofiler"]

[profile.release]
opt-level = 2
debug = false
rpath = false
# false: Performs "thin local LTO" which performs "thin" LTO on the local crate
# only across its codegen units. No LTO is performed if codegen units is 1 or
# opt-level is 0.
lto = false
debug-assertions = false

[[bin]]

name = "datalog_example_cli"
path = "src/main.rs"


# [lib] section must be in the end

[lib]
name = "datalog_example_ddlog"
# Compiler will append the crate-type attribute here
# crate-type = ["rlib", "staticlib"]
