[package]
name = "datalog_example"
version = "0.1.0"
edition = "2018"
autobins = false
build = "src/build.rs"

[features]
default = ["command-line", "c_api"]
flatbuf = ["flatbuffers", "differential_datalog/flatbuf"]
profile = ["cpuprofiler"]
ovsdb = ["ddlog_ovsdb_adapter"]
command-line = ["cmd_parser", "rustop"]
nested_ts_32 = ["differential_datalog/nested_ts_32"]
c_api = ["differential_datalog/c_api"]
distribution = ["d3log", "serde_json", "rand"]

[dependencies.d3log]
path = "./d3log"
optional = true

[dependencies.serde_json]
version="1.0.60"
optional = true

[dependencies.rand]
version = "0.8.4"
optional = true

[dependencies]
abomonation = "0.7"
time = { version = "0.2", features = ["serde"] }
ordered-float = { version = "2.0.0", features = ["serde"] }
cpuprofiler = { version = "0.0", optional = true }
#differential-dataflow = "0.11.0"
differential-dataflow = { git = "https://github.com/ddlog-dev/differential-dataflow", branch = "ddlog-4" }
#timely = "0.11"
timely = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-4", default-features = false }
fnv = "1.0.2"
once_cell = "1.4.1"
libc = "0.2"
num-traits = "0.2"
num = { version = "0.3", features = ["serde"] }
rustop = { version = "1.0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
crossbeam-channel = "0.5.0"
enum-primitive-derive = "0.2.1"
triomphe = "0.1.3"
tokio = {version = "1.4.0", features =["net", "macros", "rt-multi-thread", "io-util", "rt", "sync", "fs"]}

# FlatBuffers dependency enabled by the `flatbuf` feature.
# flatbuffers crate version must be in sync with the flatc compiler and Java
# libraries: flatbuffers "0.6" <-> FlatBuffers "1.11.0".
flatbuffers = { version = "0.6", optional = true }

[dependencies.differential_datalog]
path = "./differential_datalog"

[dependencies.cmd_parser]
path = "./cmd_parser"
optional = true

[dependencies.ddlog_ovsdb_adapter]
path = "./ovsdb"
optional = true

[target.'cfg(not(windows))'.build-dependencies]
libtool = "0.1"

[[bin]]
name = "datalog_example_cli"
path = "src/main.rs"
required-features = ["command-line"]

# [lib] section must be in the end

[lib]
name = "datalog_example_ddlog"
# Compiler will append the crate-type attribute here as well as the
# build profile and workspace definition
# crate-type = ["rlib", "staticlib"]
