[package]
name = "datalog_example"
version = "0.1.0"
edition = "2018"
autobins = false
build = "src/build.rs"

[features]
default = ["command-line", "c_api"]
flatbuf = ["flatbuffers", "differential_datalog/flatbuf"]
profile = ["cpuprofiler"]
ovsdb = ["ddlog_ovsdb_adapter"]
command-line = ["cmd_parser", "rustop"]
nested_ts_32 = ["differential_datalog/nested_ts_32"]
c_api = ["differential_datalog/c_api"]
checked_weights = ["differential_datalog/checked_weights"]
deserialize_any = []

[dependencies]
abomonation = "0.7"
ordered-float = { version = "2.0.0", features = ["serde"] }
cpuprofiler = { version = "0.0", optional = true }
#differential-dataflow = "0.11.0"
differential-dataflow = { git = "https://github.com/ddlog-dev/differential-dataflow", branch = "ddlog-4" }
#timely = "0.11"
timely = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-4", default-features = false }
fnv = "1.0.2"
once_cell = "1.8.0"
libc = "0.2"
num-traits = "0.2"
num = { version = "0.3", features = ["serde"] }
rustop = { version = "1.1.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
crossbeam-channel = "0.5.0"
enum-primitive-derive = "0.2.1"
triomphe = "0.1.3"
phf = { version = "0.10.0", features = ["macros"] }

# FlatBuffers dependency enabled by the `flatbuf` feature.
# flatbuffers crate version must be in sync with the flatc compiler and Java
# libraries: flatbuffers "2.0.0" <-> FlatBuffers "2.0.0".
flatbuffers = { version = "2.0.0", optional = true }

[dependencies.differential_datalog]
path = "./differential_datalog"

[dependencies.ddlog_profiler]
path = "./ddlog_profiler"

[dependencies.cmd_parser]
path = "./cmd_parser"
optional = true

[dependencies.ddlog_ovsdb_adapter]
path = "./ovsdb"
optional = true

[target.'cfg(not(windows))'.build-dependencies]
libtool = "0.1"

[[bin]]
name = "datalog_example_cli"
path = "src/main.rs"
required-features = ["command-line"]

# [lib] section must be in the end

[lib]
name = "datalog_example_ddlog"
# Compiler will append the crate-type attribute here as well as the
# build profile and workspace definition
# crate-type = ["rlib", "staticlib"]
