[package]
name = "cmd_parser"
version = "0.1.0"

[dependencies.differential_datalog]
path = "../differential_datalog"

[dependencies]
nom = "4.0"
num = "0.2"
rustyline = "1.0.0"
libc = "0.2.42"

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = false
debug-assertions = false

[lib]
name = "cmd_parser"
path = "./lib.rs"
