[package]
name = "cmd_parser"
version = "0.1.0"
edition = "2018"

[dependencies.differential_datalog]
path = "../differential_datalog"

[dependencies]
libc = "0.2.42"
ordered-float = { version = "2.0.0", features = ["serde"] }
nom = "4.0"
num = "0.3"
rustyline = "1.0.0"
tokio = { version = "1", features = ["sync", "macros", "net", "io-util"] }

[lib]
name = "cmd_parser"
path = "lib.rs"
