[package]
name = "cmd_parser"
version = "0.1.0"
edition = "2018"

[dependencies.differential_datalog]
path = "../differential_datalog"

[dependencies]
libc = "0.2.107"
ordered-float = { version = "2.8.0", features = ["serde"] }
nom = "4.0"
num = "0.4.0"
rustyline = "1.0.0"

[lib]
name = "cmd_parser"
path = "lib.rs"
