[package]
name = "ddlog_profiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

timely = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-4", default-features = false }
differential-dataflow = { git = "https://github.com/ddlog-dev/differential-dataflow", branch = "ddlog-4" }

csv = "1.1"
fnv = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
once_cell = "1.8.0"
sequence_trie = "0.3"
