[package]
name = "ddlog_profiler"
version = "0.1.0"
edition = "2018"

[dependencies]
csv = "1.1.6"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
once_cell = "1.8.0"
sequence_trie = "0.3"

timely = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-4", default-features = false }
differential-dataflow = { git = "https://github.com/ddlog-dev/differential-dataflow", branch = "ddlog-4" }
