[package]
name = "differential_datalog"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
byteorder = "0.4.2"
getopts = "0.2.14"
itertools = "^0.6"
serde_derive = "1.0"

[dependencies]
differential-dataflow = "0.11.0"
abomonation = "0.7"
fnv = "1.0.2"
timely = "0.11"
libc = "0.2"
num = { version = "0.2", features = ["serde"] }
sequence_trie = "0.3"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
flatbuf = []

[lib]
name = "differential_datalog"
path = "lib.rs"
