[package]
name = "differential_datalog_test"
version = "0.1.0"
edition = "2018"

[lib]
name = "differential_datalog_test"
path = "lib.rs"

[dependencies]
num = "0.4.0"
abomonation = "0.7.3"
serde_json = "1.0.69"
erased-serde = "0.3.16"
abomonation_derive = "0.5.0"
ddlog_derive = { path = "../ddlog_derive" }
ddlog_profiler = { path = "../ddlog_profiler" }
serde = { version = "1.0.130", features = ["derive"] }
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
differential_datalog = { path = "../differential_datalog" }
datalog_example = { path = "../", default-features = false }
timely = { git = "https://github.com/ddlog-dev/timely-dataflow", branch = "ddlog-4", default-features = false }
differential-dataflow = { git = "https://github.com/ddlog-dev/differential-dataflow", branch = "ddlog-4", default-features = false }
