[package]
name = "distributed_datalog"
version = "0.1.0"
edition = "2018"

[dependencies.cmd_parser]
path = "../cmd_parser"

[dependencies.differential_datalog]
path = "../differential_datalog"

[dev-dependencies]
env_logger = {version = "0.7", default_features = false, features = ["humantime"]}
tempfile = "3.1"
test-env-log = "0.1"
waitfor = "0.1"

[dependencies]
bincode = "1.2"
libc = "0.2"
log = "0.4"
nom = "4.0"
serde = {version = "1.0", features = ["derive"]}
waitfor = {version = "0.1", optional = true}

[features]
test = ["waitfor"]
