[package]
name = "distributed_datalog"
version = "0.1.0"
edition = "2018"

[features]
test = ["waitfor"]

[dependencies.cmd_parser]
path = "../cmd_parser"

[dependencies.differential_datalog]
path = "../differential_datalog"

[dependencies]
bincode = "1.2"
libc = "0.2"
log = "0.4"
nom = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uid = "0.1"
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }
waitfor = { version = "0.1", optional = true }
zookeeper = "0.5"

[dev-dependencies]
env_logger = { version = "0.7", default_features = false, features = ["humantime"] }
maplit = "1.0"
serial_test = "0.2"
serial_test_derive = "0.2"
tempfile = "3.1"
test-env-log = "0.1"
waitfor = "0.1"
# Import `test_value.rs`.
differential_datalog_test = { path = "../differential_datalog_test" }
