[package]
name = "ddlog_ovsdb_adapter"
version = "0.1.0"
edition = "2018"

[lib]
name = "ddlog_ovsdb_adapter"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
num = "0.4.0"
uuid = "0.8.2"
serde_json = "1.0.69"

    [dependencies.differential_datalog]
    path = "../differential_datalog"
