[package]
name = "types"
version = "0.1.0"
edition = "2018"
autobins = false

[features]
default = []
flatbuf = ["flatbuffers", "differential_datalog/flatbuf"]
ovsdb = ["ddlog_ovsdb_adapter"]
c_api = ["differential_datalog/c_api"]

[dependencies.differential_datalog]
path = "../differential_datalog"

[dependencies.ddlog_ovsdb_adapter]
path = "../ovsdb"
optional = true

[dependencies]
abomonation = "0.7"
ordered-float = { version = "2.0.0", features = ["serde"] }
time = { version = "0.2", features = ["serde"] }
differential-dataflow = "0.11.0"
fnv = "1.0.2"
once_cell = "1.4.1"
libc = "0.2"
num-traits = "0.2"
num = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
timely = "0.11"
erased-serde = "0.3"

# FlatBuffers dependency enabled by the `flatbuf` feature.
# flatbuffers crate version must be in sync with the flatc compiler and Java
# libraries: flatbuffers "0.6" <-> FlatBuffers "1.11.0".
flatbuffers = { version = "0.6", optional = true }

[lib]
name = "types"
path = "lib.rs"
