[package]
name = "value"
version = "0.1.0"
edition = "2018"
autobins = false

[features]
default = []
flatbuf = ["flatbuffers", "differential_datalog/flatbuf", "types/flatbuf"]
ovsdb = ["types/ovsdb"]

[dependencies.differential_datalog]
path = "../differential_datalog"

[dependencies.types]
path = "../types"

[dependencies]
abomonation = "0.7"
differential-dataflow = "0.11.0"
fnv = "1.0.2"
once_cell = "1.4.1"
libc = "0.2"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
timely = "0.11"
ordered-float = { version = "2.0.0", features = ["serde"] }
erased-serde = "0.3"

# FlatBuffers dependency enabled by the `flatbuf` feature.
# flatbuffers crate version must be in sync with the flatc compiler and Java
# libraries: flatbuffers "0.6" <-> FlatBuffers "1.11.0".
flatbuffers = { version = "0.6", optional = true }

[lib]
name = "value"
path = "lib.rs"
