[package]
name = "dbpedia_ownership_test"
version = "0.1.0"
authors = ["Alexander Falzberger <falzberger.alexander@gmail.com>"]
edition = "2018"

[dependencies]
dbpedia_ownership = {path = "../dbpedia_ownership_ddlog"}
differential_datalog = {path = "../dbpedia_ownership_ddlog/differential_datalog"}
distributed_datalog = {path = "../dbpedia_ownership_ddlog/distributed_datalog", features = ["test"]}
env_logger = {version = "0.7", default_features = false, features = ["humantime"]}
maplit = {version = "1.0", default-features = false}
structopt = "0.3"
uuid = {version = "0.8", default-features = false, features = ["v4"]}
