[package]
name = "ip_discovery_cli"
version = "0.1.0"
authors = ["Daniel Mueller <danielmuller@vmware.com>"]
edition = "2018"

[dependencies]
differential_datalog = {path = "../ip_discovery_ddlog/differential_datalog"}
distributed_datalog = {path = "../ip_discovery_ddlog/distributed_datalog", features = ["test"]}
env_logger = {version = "0.7", default_features = false, features = ["humantime"]}
ip_discovery = {path = "../ip_discovery_ddlog"}
maplit = {version = "1.0", default-features = false}
structopt = "0.3"
uuid = {version = "0.8", default-features = false, features = ["v4"]}
