[package]
name = "lb_test"
version = "0.1.0"
edition = "2018"

[dependencies]

# The generated Rust project contains several crates that must be imported
# by the client program.
differential_datalog = {path = "../lb_ddlog/differential_datalog"}
lb = {path = "../lb_ddlog"}
ddlog_rt = {path = "../lb_ddlog/types/ddlog_rt"}
types = {path = "../lb_ddlog/types"}
