[package]
name = "rust_api_test"
version = "0.1.0"
edition = "2018"

[dependencies]

serde_json = "1.0.64"
serde = "1.0"

# The generated Rust project contains several crates that must be imported
# by the client program.
differential_datalog = { path = "../tutorial_ddlog/differential_datalog" }
tutorial = { path = "../tutorial_ddlog", features = ["deserialize_any"] }
ddlog_rt = { path = "../tutorial_ddlog/types/ddlog_rt" }
types = { path = "../tutorial_ddlog/types" }
