[package]
name = "server_api_test"
version = "0.1.0"
edition = "2018"

[dependencies]
differential_datalog = {path = "../server_api_ddlog/differential_datalog"}
distributed_datalog = {path = "../server_api_ddlog/distributed_datalog", features=["test"]}
maplit = "1.0"
server_api = {path = "../server_api_ddlog"}
uuid = {version = "0.8", default-features = false, features = ["v4"]}

[dev-dependencies]
env_logger = {version = "0.6", default_features = false, features = ["humantime"]}
test-env-log = "0.1"
