[package]
name = "tcp_a"
version = "0.1.0"
authors = ["Remy Wang <remy.sucre@gmail.com>"]
edition = "2018"

[dependencies]
observe = {path = "../roundtrip_ddlog/observe"}
serde_json = "1.0"
serde = "1.0"
tcp_channel = {path = "../roundtrip_ddlog/tcp_channel"}
roundtrip = {path = "../roundtrip_ddlog"}
differential_datalog = {path = "../roundtrip_ddlog/differential_datalog"}
