[package]
name = "sender"
version = "0.1.0"
authors = ["Remy Wang <remy.sucre@gmail.com>"]
edition = "2018"

[dependencies]
observe = {path = "../ddd_ddlog/observe"}
serde_json = "1.0"
serde = "1.0"
tcp_channel = {path = "../ddd_ddlog/tcp_channel"}
ddd = {path = "../ddd_ddlog"}
differential_datalog = {path = "../ddd_ddlog/differential_datalog"}
