[package]
name = "datalog"
version = "0.1.0"

[dependencies.graph_map]
git="https://github.com/frankmcsherry/graph-map.git"

[dependencies.differential-dataflow]
git="https://github.com/frankmcsherry/differential-dataflow.git"

[dependencies.timely]
git="https://github.com/frankmcsherry/timely-dataflow.git"

[dev-dependencies]
getopts="0.2.14"
rand="0.3.13"
byteorder="0.4.2"
itertools="^0.6"

[dependencies]
abomonation="0.5"
timely_communication="0.5"
fnv="1.0.2"
num = "0.1.40"
serde = "1.0.14"
serde_derive = "1.0.14"
serde_json = "1.0.3"

[features]
default = []

[profile.release]
opt-level = 1
debug = false
rpath = false
lto = false
debug-assertions = false

[lib]
name = "datalog"
path = "./lib.rs"
